--- a/监控/zabbix/index.html
+++ b/监控/zabbix/index.html
@@ -28731,12 +28731,9 @@ HkRf3amooAh8iL+7R5EX92pqKAIfIi/u0eRF/dqaigCHyIv7tHkRf3amooAh8iL+
 7R5EX92pqKAIfIi/u0eRF/dqaigCHyIv7tHkRf3amooAh8iL+7R5EX92pqKAIfIi
 /u0eRF/dqaigCHyIv7tHkRf3amooAh8iL+7R5EX92pqKAIfIi/u0eRF/dqaigCHy
 Iv7tHkRf3c1NRQAJBER92pkiTI4pE6fjUqfeFAEgRR2p1FFABRRRQB//2Q==" alt=""/>￼
-想要试图从仪表盘获取到自动发现的状态的需要去添加自动发现到表盘上</li>
-</ul>
-
-<h4 id="toc_14">添加步骤：</h4>
-
-<p>1、编辑仪表盘<br/>
+想要试图从仪表盘获取到自动发现的状态的需要去添加自动发现到表盘上<br/>
+#### 添加步骤：<br/>
+1、编辑仪表盘
 <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QBARXhpZgAATU0AKgAAAAgAAYdpAAQAAAAB
 AAAAGgAAAAAAAqACAAQAAAABAAAGXaADAAQAAAABAAABuAAAAAD/7QA4UGhvdG9z
 aG9wIDMuMAA4QklNBAQAAAAAAAA4QklNBCUAAAAAABDUHYzZjwCyBOmACZjs+EJ+
@@ -32074,8 +32071,8 @@ A5n+wov7lH9hRf3K6aigDmf7Ci/uUf2FF/crpqKAOZ/sKL+5R/YUX9yumooA5n+w
 ov7lH9hRf3K6aigDmf7Ci/uUf2FF/crpqKAOZ/sKL+5R/YUX9yumooA5n+wov7lH
 9hRf3K6aigDmf7Ci/uUf2FF/crpqKAOZ/sKL+5R/YUX9yumooA5n+wov7lH9hRf3
 K6aigDmf7Ci/uUf2FF/crpqKAOZ/sKL+5R/YUX9yumooA5kaFF/cqZdEj4+TH+fr
-XQUo6j60AZMekov8NaMVkq4+WrlTJ90UAMSML9aloooA/9k=" alt=""/>￼<br/>
-2、添加小部件<br/>
+XQUo6j60AZMekov8NaMVkq4+WrlTJ90UAMSML9aloooA/9k=" alt=""/>￼
+2、添加小部件
 <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QBARXhpZgAATU0AKgAAAAgAAYdpAAQAAAAB
 AAAAGgAAAAAAAqACAAQAAAABAAAGYqADAAQAAAABAAABhQAAAAD/7QA4UGhvdG9z
 aG9wIDMuMAA4QklNBAQAAAAAAAA4QklNBCUAAAAAABDUHYzZjwCyBOmACZjs+EJ+
@@ -35081,8 +35078,8 @@ RQBU+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n
 n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n+fyq3RQB
 U+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fyo+xw+n+fy
 q3RQBU+xw+n+fyo+xw+n+fyq3RQBU+xw+n+fypRZw+n+fyq1RQBClpCc8dP8+lWE
-t4xgAU6PvUo6j60APWJRUlFFABRRRQB//9k=" alt=""/>￼<br/>
-3、添加自动发现状态<br/>
+t4xgAU6PvUo6j60APWJRUlFFABRRRQB//9k=" alt=""/>￼
+3、添加自动发现状态
 <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QBARXhpZgAATU0AKgAAAAgAAYdpAAQAAAAB
 AAAAGgAAAAAAAqACAAQAAAABAAADBKADAAQAAAABAAABPQAAAAD/7QA4UGhvdG9z
 aG9wIDMuMAA4QklNBAQAAAAAAAA4QklNBCUAAAAAABDUHYzZjwCyBOmACZjs+EJ+
@@ -36226,8 +36223,8 @@ P8/lQB4Z/wAIbF/zzo/4Q2L/AJ517n9jh9P8/lR9jh9P8/lQB4Z/whsX/POj/hDY
 v+ede5/Y4fT/AD+VH2OH0/z+VAHhn/CGxf8APOj/AIQ2L/nnXuf2OH0/z+VH2OH0
 /wA/lQB4Z/whsX/POnL4Mjz/AKrNe4/Y4fT/AD+VH2OH0/z+VAHjMXg+NCP3Vb9n
 4bSMg+XivS1tIc9Ov+fSp1to17cUAc1ZaWsWPkxiumt4NuOKsrCoAPrUoAHAoAUD
-Ax6UUUUAf//Z" alt=""/>￼<br/>
-4、规划仪表盘<br/>
+Ax6UUUUAf//Z" alt=""/>￼
+4、规划仪表盘
 <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QBARXhpZgAATU0AKgAAAAgAAYdpAAQAAAAB
 AAAAGgAAAAAAAqACAAQAAAABAAAGWqADAAQAAAABAAADZgAAAAD/7QA4UGhvdG9z
 aG9wIDMuMAA4QklNBAQAAAAAAAA4QklNBCUAAAAAABDUHYzZjwCyBOmACZjs+EJ+
@@ -40957,11 +40954,9 @@ oAzf7Mh/uij+zIf7orSooAzf7Mh/uij+zIf7orSooAzf7Mh/uij+zIf7orSooAzf
 uij+zIf7orSooAzf7Mh/uij+zIf7orSooAzf7Mh/uij+zIf7orSooAzf7Mh/uij+
 zIf7orSooAzf7Mh/uij+zIf7orSooAzf7Mh/uij+zIf7orSooAzf7Mh/uij+zIf7
 orSooAzf7Mh/uij+zIf7orSooAzhp0I7AVKmnw+gyKuVJH3oAhSzjXA71bSBVoHU
-fWp6AADHFFFFAH//2Q==" alt=""/>￼</p>
-
-<ul>
-<li>创建发现Action<br/>
-zabbix发现规则创建完成，客户端agent安装后，被发现的IP主机不会自动添加至zabbix监控列表，需要添加发现动作；
+fWp6AADHFFFFAH//2Q==" alt=""/>￼</li>
+<li><p>创建发现Action<br/>
+zabbix发现规则创建完成，客户端agent安装后，被发现的IP主机不会自动添加至zabbix监控列表，需要添加发现动作；<br/>
 <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAASABIAAD/4QBARXhpZgAATU0AKgAAAAgAAYdpAAQAAAAB
 AAAAGgAAAAAAAqACAAQAAAABAAAGYqADAAQAAAABAAACXQAAAAD/7QA4UGhvdG9z
 aG9wIDMuMAA4QklNBAQAAAAAAAA4QklNBCUAAAAAABDUHYzZjwCyBOmACZjs+EJ+
@@ -43750,8 +43745,20 @@ AJ517n9jh9P8/lR9jh9P8/lQB4Z/whsX/POj/hDYv+ede5/Y4fT/AD+VH2OH0/z+
 VAHhn/CGxf8APOj/AIQ2L/nnXuf2OH0/z+VH2OH0/wA/lQB4Z/whsX/POj/hDYv+
 ede5/Y4fT/P5UfY4fT/P5UAeGf8ACGxf886P+ENi/wCede5/Y4fT/P5UfY4fT/P5
 UAeGf8IbF/zzp6eDI/8AnlXuH2OH0/z+VKLOH0/z+VAHj0HhKNCMRdK6Sy8PJFj9
-3XoKWkJzx0/z6VYS3jGABQBh2eniLHy4roYYto5GMVKsSipKACiiigD/2Q==" alt=""/>￼</li>
+3XoKWkJzx0/z6VYS3jGABQBh2eniLHy4roYYto5GMVKsSipKACiiigD/2Q==" alt=""/>￼</p></li>
+<li><p>部署环境的考虑</p></li>
 </ul>
+
+<p>zabbix-server尽量部署在核心业务所在的机房，要求到各分节点的网络稳定。另外，要考虑到网络流量问题，做好安全策略。</p>
+
+<p><code>hello 您好[]</code><a href="">github.coom</a>``</p>
+
+<pre><code class="language-github.coom健康减肥快乐就是开了房间">```&gt; &gt; &gt; 
+-------
+你好 你怎么找我呢
+-------
+    
+</code></pre>
 
 </div></body>
 
