repace linux发展及历史.html

--- a/history/linux发展及历史.html
+++ b/history/linux发展及历史.html
@@ -2,7 +2,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>linux 发展及历史</title>
+<title>linux发展及历史</title>
 <style>
 html,body{ font-family: "SF UI Display", ".PingFang SC","PingFang SC", "Neue Haas Grotesk Text Pro", "Arial Nova", "Segoe UI", "Microsoft YaHei", "Microsoft JhengHei", "Helvetica Neue", "Source Han Sans SC", "Noto Sans CJK SC", "Source Han Sans CN", "Noto Sans SC", "Source Han Sans TC", "Noto Sans CJK TC", "Hiragino Sans GB", sans-serif;
   font-size: 16px;
@@ -261,7 +261,7 @@ pre[class*="language-"].line-numbers > code {
 </style>
 
 <style> @media print{ code[class*="language-"],pre[class*="language-"]{overflow: visible; word-wrap: break-word !important;} }</style></head><body><div id="markdown-body-wrap" class="markdown-body">
-<h1 id="toc_0">linux 发展及历史</h1>
+<h1 id="toc_0">linux发展及历史</h1>
 
 <h2 id="toc_1">linux与开源软件</h2>
 
@@ -4895,6 +4895,23 @@ kRf3aPIi/u0AeOf8IhF/zx/z+dOXwhFn/UivYfIi/u0eRF/doA8oj8KRoR+6/Stq
 <h2 id="toc_5">Linux在云计算/大数据的发展</h2>
 
 <p>互联网产业的迅速发展，促使云计算、大数据产业的形成并快速发展，云计算、大数据作为一个基于开源软件的平台，Linux占据了核心优势。</p>
+
+<h2 id="toc_6">linux操作系统特点</h2>
+
+<ol>
+<li>开放性<br/>
+Linux操作系统的兼容性很高，遵循世界标准规范，特别是开放系统互联（OSI）国际标准，而微软的视窗操作系统源代码基本保密；</li>
+<li>多任务<br/>
+在多核处理时代，Linux操作系统的一大优势是：系统调度的每一个进程都可以平等的访问微处理器，而因为CPU的处理速度非常快，所以各个应用程序看起来就像同时运行的。</li>
+<li>多用户<br/>
+Linux是一个多用户操作系统，系统资源可以被不同各自拥有使用，而没有用户对自己的资源（例如文件、设备）都有特定的权限，互不影响。 </li>
+<li>设备独立性<br/>
+Linux可以把所有外部设备统一当做文件，只要安装相关的驱动程序,任何用户都可以像文件一样使用这些设备。另外，用户可以免费得到Linux的内核源代码，这样，用户变可以自己修改操作系统的内核源代码，以适应新增加的外部设备。</li>
+<li>提供丰富的网络功能<br/>
+一般的操作系统并没有内资的网络连接功能，也不具备联网的灵活性。而Linux操作系统具有完善的与内核结合在一起的网络功能，在通信和网络功能方面优于其他操作系统。</li>
+<li>费用低廉<br/>
+与微软的Windows操作系统相比，Linux系统的使用费用几乎可以忽略。由于Linux基于GPL，系统本身免费，而且不少发行套件包含了丰富的应用软件，基本上都可以满足大多数用户的使用需求。</li>
+</ol>
 
 </div></body>
 
